# igris-rust-sdk

./: .gitignore  API_COVERAGE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  comprehensive.rs  main.rs
src/: btree.rs  client.rs  containment.rs  error.rs  errors.rs  fleet.rs  lib.rs  models.rs  providers.rs  receipt.rs  runtime.rs  types.rs  usage.rs  vault.rs
src/api/: admin.rs  analytics.rs  data.rs  document.rs  ml.rs  mod.rs  monitoring.rs  quality.rs  storage.rs  users.rs
tests/: btree_test.rs  client_test.rs  integration_tests.rs  runtime_test.rs
