[package]
name = "schlep_engine"
version = "1.0.0"
edition = "2021"
authors = ["Igris Inertial <support@igris-inertial.com>"]
description = "Official Rust SDK for the Igris Inertial API platform"
license = "MIT"
repository = "https://github.com/igris-inertial/rust-sdk"
documentation = "https://docs.igris-inertial.com/sdk/rust"
keywords = ["api", "sdk", "data-processing", "machine-learning", "schlep-engine"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.0"
futures = "0.3"
tokio-tungstenite = "0.20"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"

[[example]]
name = "basic_usage"
path = "examples/main.rs"

[lib]
name = "schlep_engine"
path = "src/lib.rs"
