[package]
name = "igris-inertial"
version = "2.2.0"
edition = "2021"
description = "Rust SDK for Igris Inertial — AI inference gateway"
license = "MIT"
repository = "https://github.com/igris-inertial/rust-sdk"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[features]
default = []
yaml = ["dep:serde_yaml"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"
rand = "0.8"
